# BreakOut_Pong

./: CMakeLists.txt  README.md  index.html  main.cpp
include/: Pong.h  atlas_bricks_ball.h  bagel.h  bagel_cfg.h  components.h  game.h  newgame.h
res/: atlas_bricks_ball.h
src/: Pong.cpp  game.cpp  newgame.cpp
